[package]
name = "n3"
version = "0.1.0"
authors = ["Devereux Henley <devereux.henley@gmail.com>"]
edition = "2018"
license = "Modified MIT"
repository = "https://github.com/Devereux-Henley/n3-rust"
categories = [
  "no-std"
]
keywords = [
  "rdf",
  "n3",
  "turtle",
  "solid",
]

[dependencies]
heapless = "0.5.1"
numtoa = "0.2.3"
hashbrown = "0.6.0"

[dependencies.serde]
default-features = false
version = "1.0.101"
